# traffic_parser

./: Cargo.toml  LICENSE  README.md  Taskfile.yml  config.yaml
.github/workflows/: lint.yml  test.yml
src/: app.rs  config.rs  connection.rs  detector.rs  domain_watcher.rs  errors.rs  http.rs  interface.rs  main.rs  processor.rs
src/nft/: constants.rs  ipset.rs  mod.rs  table.rs
src/packet/: ip.rs  mod.rs  tcp.rs  tcp_flags.rs  tls.rs
static/: connections.html  index.html
