[package]
name = "traffic_parser"
version = "0.1.0"
edition = "2024"

[dependencies]
pcap = "2.2.0"
pnet = "0.35.0"
tokio = { version = "1.46.1", features = ["full"] }
rtest = { git = "https://github.com/glebziz/rtest", version = "0.1.0" }
tls-parser = { version = "0.12.2", git = "https://github.com/rusticata/tls-parser.git" }
netlink-sys = "0.8.7"
netlink-packet-core = "0.7.0"
netlink-packet-utils = "0.5.1"
netlink-packet-netfilter = "0.2.0"
serde = { version = "1.0.219", features = ["derive"] }
config = "0.15.13"
libc = "0.2.174"
log = "0.4.27"
duration-str = "0.17.0"
env_logger = "0.11.8"
axum = "0.8.4"
clap = { version = "4.5.41", features = ["derive"] }
serde_json = "1.0.140"
mockall = "0.13.1"